# squirrelparser

./: .classpath  .gitignore  .project  LICENSE  README.md  pom.xml  run_all_lints.sh  run_all_tests.sh
dart/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
dart/example/: cst_calculator_example.dart
dart/lib/: squirrel_parser.dart
dart/test/: cst_ast_creation_test.dart  cst_test.dart  grammar_test.dart  json_parsing_test.dart  test_utils.dart
java/: .classpath  .gitignore  .project  README.md  pom.xml
paper/: .gitignore  acmart.cls  squirrel_parser.bib  squirrel_parser.tex
python/: .gitignore  README.md  pyproject.toml
python/squirrelparser/: __init__.py  ast_node.py  clause.py  combinators.py  cst_node.py  match_result.py  memo_entry.py  meta_grammar.py  parser.py  parser_stats.py  squirrel_parse.py  terminals.py  utils.py
python/tests/: __init__.py  test_advanced_stress.py  test_all_fixes_monotonic.py  test_bound_propagation.py  test_boundary.py  test_boundary_preservation.py  test_cache_clearing_lr.py  test_complex_interactions.py  test_cst.py  test_cst_ast_creation.py  test_error_localization.py  test_first.py  test_first_alternative_selection.py  test_fix1.py  test_fix2_fix3.py  test_fix4.py  test_fix5_fix6.py  test_fix_comprehensive.py  test_grammar.py  test_json_parsing.py  test_linearity.py  test_lookahead.py  test_lr.py  test_lr_figure.py  test_lr_recovery.py  test_lr_recovery_interaction.py  test_monotonic.py  test_oneormore_recovery.py  test_optional_recovery.py  test_performance_edge_case.py  test_ref_lr_masking.py  test_repetition.py  test_repetition_edge_case.py  test_sequence.py  test_spanning_invariant.py  test_stress.py  test_unicode.py  test_utils.py  test_visibility_constraint.py
python/tests/meta_grammar/: __init__.py  test_ast_building.py  test_basic_syntax.py  test_character_class.py  test_complex_grammars.py  test_empty_parentheses.py  test_escape_sequences.py  test_precedence.py  test_rule_references.py  test_stress.py
typescript/: .gitignore  LICENSE  README.md  eslint.config.mts  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
typescript/src/: ast.ts  clause.ts  combinators.ts  cstNode.ts  index.ts  matchResult.ts  memoEntry.ts  metaGrammar.ts  parser.ts  parserStats.ts  squirrelParse.ts  terminals.ts  utils.ts
typescript/tests/: advancedStress.test.ts  allFixesMonotonic.test.ts  boundPropagation.test.ts  boundary.test.ts  boundaryPreservation.test.ts  cacheClearingLr.test.ts  complexInteractions.test.ts  cst.test.ts  cstAstCreation.test.ts  errorLocalization.test.ts  first.test.ts  firstAlternativeSelection.test.ts  fix1.test.ts  fix2Fix3.test.ts  fix4.test.ts  fix5Fix6.test.ts  fixComprehensive.test.ts  grammar.test.ts  jsonParsing.test.ts  (+20 more)
(+382 files in other folders)
