[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squirrelparser"
version = "1.0.0"
description = "A packrat parser with left recursion and error recovery"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Luke Hutchison", email = "luke.hutch@alum.mit.edu"}
]
keywords = ["parser", "packrat", "peg", "left-recursion", "error-recovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
]

[project.urls]
Homepage = "https://github.com/lukehutch/squirrelparser"
Repository = "https://github.com/lukehutch/squirrelparser"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squirrelparser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
